# nn_test

./: LICENSE  OPERA-V.md  pyproject.toml  train.py
src/opera_v/: __init__.py  butterfly.py  compaction.py  config.py  implicit_block.py  lifting.py  model.py  modulator.py  multigrid.py  norms.py  pwdm.py  readout.py  reversible.py  router.py  utils.py
